--- a/index.html
+++ b/index.html
@@ -1,4 +1,31 @@
-<head></head>
+<!DOCTYPE html>
+<head>
+    <style>
+        #camera {
+            width: 500px;
+
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        #pointer {    
+            width: 10px;
+            height: 10px;
+            background-color: white;
+
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+    </style>
+</head>
 <body>
-  <div> ciao </div>
+    <canvas hidden></canvas>
+    <video autoplay="true" id="camera"></video>
+    <div id="pointer"></div>
+    <div id="color" > sssss </div>
+    <script src="index.js"></script>
 </body>
