--- a/hamburger/index.html
+++ b/hamburger/index.html
@@ -136,9 +136,8 @@
             while (child && child.tagName == "IMG") {
                 hamburgerBox.removeChild(child);
                 child = hamburgerBox.lastElementChild;
-                console.log("aaa")
             }
-            console.log("aaa")
+            posCounter = 10
         }
 
     </script>
