--- a/edcivica2024/index.html
+++ b/edcivica2024/index.html
@@ -12,7 +12,7 @@
         Non supportato dal browser.
     </canvas>
 
-    <img hidden src="assets/disco1.png" id="disk">
+    <img hidden src="assets/disco.png" id="disk">
     <img hidden src="assets/lettoredvd.png" id="letdvd">
     <img hidden src="assets/lettoredvdCut.png" id="letdvdcut">
     <img hidden src="assets/hikikomoriback.jpg" id="hikikomoriback">
@@ -36,6 +36,7 @@
     <img hidden src="assets/nicotinaback.jpeg" id="nicotinaback">
     <img hidden src="assets/unsupervised.jpg" id="unsupervised">
     <img hidden src="assets/arteback.jpg" id="arteback">
+    <img hidden src="assets/background.jpg" id="background">
 
     <script src="main.js"></script>
 
