--- a/edcivica2024/index.html
+++ b/edcivica2024/index.html
@@ -4,6 +4,7 @@
         body {
             display: block;
             margin: 0;
+            overscroll-behavior-x: none;
         }
     </style>
 </head>
